src/objects/TracHier__KPI__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Activities__c</fullName>
        <label>Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Closed_Won_Opp_Amount__c</fullName>
        <label>Closed Won Opp Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TracHier__Closed_Won_Opp_Avg__c</fullName>
        <label>Closed Won Opp Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TracHier__Closed_Won_Opps__c</fullName>
        <label>Closed Won Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Contacts__c</fullName>
        <label>Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Date__c</fullName>
        <label>KPI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TracHier__Leads__c</fullName>
        <label>Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Master_Account__c</fullName>
        <label>Master Account</label>
        <referenceTo>TracHier__Master_Account__c</referenceTo>
        <relationshipLabel>KPIs</relationshipLabel>
        <relationshipName>KPIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TracHier__Open_Cases__c</fullName>
        <label>Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Open_Opp_Amount__c</fullName>
        <label>Open Opp Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TracHier__Open_Opps__c</fullName>
        <label>Open Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Opp_Contact_Roles__c</fullName>
        <label>Opp Contact Roles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Opp_Products_Sold__c</fullName>
        <label>Opp Products Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI</label>
    <nameField>
        <label>KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>